--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
           window,
           document,
           "script",
-          "https://heron.voiceweb.eu/bm/embed/embed.js','mtnbot','web',"
+          "https://heron.voiceweb.eu/bm/embed/embed.js",
+          "mtnbot",
+          "web",
+          ""
         );
       </script>
     </div>
